--- a/app/src/main/res/layout/activity_contest.xml
+++ b/app/src/main/res/layout/activity_contest.xml
@@ -115,7 +115,55 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="550dp"
         android:layout_marginTop="5dp" />
+
+    <LinearLayout
+        android:id="@+id/createTeamLayout"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center"
+        android:background="@drawable/border2_black"
+        android:gravity="bottom"
+        android:orientation="horizontal"
+        android:weightSum="10">
+
+        <TextView
+            android:id="@+id/matchList"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_weight="4.5"
+            android:gravity="center"
+            android:paddingTop="5dp"
+            android:text="MATCH LIST"
+            android:textAlignment="center"
+            android:textColor="#ffff" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:paddingTop="5dp"
+            android:text="/"
+            android:textAlignment="center"
+            android:textColor="#ffff" />
+
+        <TextView
+            android:id="@+id/createTeam"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_weight="4.5"
+            android:gravity="center"
+            android:paddingTop="5dp"
+            android:text="CREATE TEAM"
+            android:textAlignment="center"
+            android:textColor="#ffff" />
+
+    </LinearLayout>
 
 </LinearLayout>
