--- a/app/src/main/res/layout/contest_list.xml
+++ b/app/src/main/res/layout/contest_list.xml
@@ -3,16 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewContest"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
         app:cardCornerRadius="6dp"
         tools:ignore="MissingConstraints">
 
@@ -52,14 +53,15 @@
             android:weightSum="10">
 
             <TextView
-                android:id="@+id/prize"
+                android:id="@+id/total_prize"
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
                 android:layout_gravity="center"
                 android:drawableLeft="@drawable/indian_rupiya_symbol"
                 android:gravity="center"
-                android:text="1Lakh"
+                android:paddingEnd="2dp"
                 android:textColor="@color/black"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
             <View
@@ -76,9 +78,9 @@
                 android:background="@drawable/border1_green"
                 android:drawableLeft="@drawable/indian_rupiya_white"
                 android:gravity="center"
-                android:padding="5dp"
-                android:text="39"
+                android:paddingStart="10dp"
                 android:textColor="@color/white"
+                android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
@@ -134,9 +136,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="50K"
                 android:layout_gravity="center"
-                android:drawableLeft="@drawable/indian_rupiya_symbol"
+                android:drawableLeft="@drawable/ic_baseline_currency_rupee_22"
+                android:text="50K"
                 android:textColor="@color/black" />
 
             <View
@@ -148,9 +150,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="61%"
                 android:drawableLeft="@drawable/prize"
-                android:gravity="center" />
+                android:gravity="center"
+                android:text="61%" />
 
             <View
                 android:layout_width="0dp"
