--- a/app/src/main/res/layout/fragment_contests.xml
+++ b/app/src/main/res/layout/fragment_contests.xml
@@ -2,16 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".Fragment.ContestsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewMatchList"
+        android:id="@+id/contestsList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:layout_margin="5dp"
-        tools:ignore="InvalidId" />
+        android:layout_margin="5dp" />
 
 </LinearLayout>
