--- a/app/src/main/res/layout/activity_contest.xml
+++ b/app/src/main/res/layout/activity_contest.xml
@@ -138,7 +138,7 @@
             android:layout_weight="4.5"
             android:gravity="center"
             android:padding="5dp"
-            android:text="MATCH LIST"
+            android:text="CONTESTS"
             android:textAlignment="center"
             android:textColor="#ffff"
             android:textStyle="bold" />
