--- a/app/src/main/res/layout/contest_list.xml
+++ b/app/src/main/res/layout/contest_list.xml
@@ -67,14 +67,13 @@
             <View
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="8" />
+                android:layout_weight="10" />
 
             <TextView
                 android:id="@+id/entryFee"
-                android:layout_width="wrap_content"
+                android:layout_width="90dp"
                 android:layout_height="35dp"
                 android:layout_gravity="center"
-                android:layout_weight="2"
                 android:background="@drawable/border1_green"
                 android:drawableLeft="@drawable/indian_rupiya_white"
                 android:gravity="center"
@@ -82,6 +81,7 @@
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -93,27 +93,49 @@
             android:weightSum="10">
 
             <TextView
-                android:id="@+id/matcha"
+                android:id="@+id/leftSports"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="2"
+                android:layout_marginRight="5dp"
                 android:gravity="left"
-                android:text="100 Sports Left" />
+                android:textColor="@color/red"
+                android:textSize="12sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight=".5"
+                android:gravity="left"
+                android:text="Spots Left"
+                android:textColor="@color/red"
+                android:textSize="12sp" />
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="6" />
+                android:layout_weight="8" />
 
             <TextView
-                android:id="@+id/matchb"
+                android:id="@+id/totalSports"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="2"
+                android:layout_weight="1"
                 android:gravity="right"
-                android:text="Total Sports" />
+                android:textColor="@color/black"
+                android:textSize="12sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight=".5"
+                android:gravity="center"
+                android:text="Spots"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
 
         </LinearLayout>
 
