--- a/app/src/main/res/layout/activity_add_cash.xml
+++ b/app/src/main/res/layout/activity_add_cash.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,12 +10,14 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="wrap_content"
+        android:background="@color/black"
         tools:ignore="MissingConstraints">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
             android:orientation="horizontal"
             android:weightSum="10">
 
@@ -22,23 +25,56 @@
                 android:id="@+id/backPress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_arrow_back_24"
+                android:layout_gravity="center"
+                android:background="@drawable/arrow_back_white"
                 android:gravity="left" />
 
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
             <TextView
+                android:id="@+id/matchATv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="9"
+                android:layout_gravity="center"
+                android:layout_weight=".5"
                 android:gravity="center"
-                android:text="Add Cash"
-                android:textColor="@color/black"
+                android:textColor="#ffff"
                 android:textSize="15sp" />
 
             <TextView
-                android:id="@+id/notification"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_notifications_none_24"
+                android:layout_gravity="center"
+                android:layout_weight=".5"
+                android:gravity="center"
+                android:text="Vs"
+                android:textColor="#ffff"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/matchBTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight=".5"
+                android:gravity="center"
+                android:textColor="#ffff"
+                android:textSize="15sp" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="7" />
+
+            <TextView
+                android:id="@+id/walletTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/white_wallet"
                 android:gravity="right" />
 
         </LinearLayout>
@@ -198,13 +234,42 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:textColor="@color/white"
             android:background="@drawable/border_red"
-            android:text="Add 50" />
+            android:gravity="center"
+            android:text="JOIN 50"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
     </LinearLayout>
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/contests"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Winnings"
+            app:tabSelectedTextColor="@color/green"
+            app:tabTextColor="@color/black" />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/myContests"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Leaderboard"
+            app:tabSelectedTextColor="@color/green"
+            app:tabTextColor="@color/black" />
+
+    </com.google.android.material.tabs.TabLayout>
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="5dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -251,7 +316,7 @@
                 android:layout_weight="2"
                 android:gravity="center"
                 android:text="Rank"
-                android:textSize="18dp"/>
+                android:textSize="18dp" />
 
             <View
                 android:layout_width="0dp"
@@ -264,7 +329,7 @@
                 android:layout_weight="2"
                 android:gravity="center"
                 android:text="Prize"
-                android:textSize="18dp"/>
+                android:textSize="18dp" />
 
         </LinearLayout>
 
@@ -278,21 +343,21 @@
             <ListView
                 android:id="@+id/listView1"
                 android:layout_width="0dp"
-                android:backgroundTint="@color/light_gray"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.5"/>
+                android:layout_weight="3.5"
+                android:backgroundTint="@color/light_gray" />
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="3"/>
+                android:layout_weight="3" />
 
             <ListView
                 android:id="@+id/listView2"
-                android:backgroundTint="@color/light_gray"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.5"/>
+                android:layout_weight="3.5"
+                android:backgroundTint="@color/light_gray" />
 
         </LinearLayout>
 
