--- a/app/src/main/res/layout/fragment_winning.xml
+++ b/app/src/main/res/layout/fragment_winning.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".Fragment.WinningFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/winningList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:layout_margin="5dp" />
 
 </FrameLayout>
