--- a/app/src/main/res/layout/contest_winners_cardview.xml
+++ b/app/src/main/res/layout/contest_winners_cardview.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -7,9 +8,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="20dp">
+        android:layout_marginRight="10dp"
+        app:cardCornerRadius="6dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,7 +32,8 @@
                 android:layout_height="45dp"
                 android:layout_weight="4"
                 android:gravity="center"
-                android:text="Match Name1"
+                android:text="Match 1"
+                android:textStyle="bold"
                 android:textColor="@color/black" />
 
             <View
@@ -45,6 +48,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="VS"
+                android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="13sp" />
 
@@ -58,7 +62,8 @@
                 android:layout_height="45dp"
                 android:layout_weight="4"
                 android:gravity="center"
-                android:text="Match Name2"
+                android:text="Match 2"
+                android:textStyle="bold"
                 android:textColor="@color/black" />
 
             <ImageView
@@ -96,6 +101,7 @@
                 android:layout_weight="2"
                 android:gravity="center"
                 android:text="Date(Match)"
+                android:textStyle="bold"
                 android:textColor="@color/black" />
 
         </LinearLayout>
@@ -105,14 +111,15 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="110dp"
             android:orientation="horizontal"
-            android:weightSum="10">
+            android:weightSum="7.5">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="2.5"
                 android:gravity="center"
-                android:text="Rank 1"
+                android:textStyle="bold"
+                android:text="Rank #1"
                 android:textColor="@color/black" />
 
             <TextView
@@ -120,7 +127,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="2.5"
                 android:gravity="center"
-                android:text="Rank 2"
+                android:text="Rank #2"
+                android:textStyle="bold"
                 android:textColor="@color/black" />
 
             <TextView
@@ -128,15 +136,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="2.5"
                 android:gravity="center"
-                android:text="Rank 3"
-                android:textColor="@color/black" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="2.5"
-                android:gravity="center"
-                android:text="Rank 4"
+                android:text="Rank #3"
+                android:textStyle="bold"
                 android:textColor="@color/black" />
 
         </LinearLayout>
@@ -145,28 +146,30 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:weightSum="20">
+            android:weightSum="15">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="150dp"
-                android:layout_weight="5">
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="5"
+                app:cardCornerRadius="5dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="2.5dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginRight="2.5dp"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="100dp"
+                        android:layout_width="match_parent"
                         android:layout_height="25dp"
                         android:layout_gravity="center"
                         android:gravity="center"
-                        android:text="Babli"
+                        android:text="AA"
                         android:textColor="@color/black" />
 
                 </LinearLayout>
@@ -174,30 +177,28 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="2.5dp"
                     android:layout_marginTop="30dp"
-                    android:layout_marginRight="2.5dp"
+                    android:gravity="center"
                     android:orientation="horizontal">
 
                     <ImageView
                         android:layout_width="100dp"
-                        android:layout_height="100dp" />
+                        android:layout_height="100dp"
+                        android:layout_gravity="center" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="2.5dp"
                     android:layout_marginTop="150dp"
-                    android:layout_marginRight="2.5dp"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="100dp"
+                        android:layout_width="match_parent"
                         android:layout_height="25dp"
                         android:layout_gravity="center"
-                        android:background="@drawable/border_red"
+                        android:background="@drawable/border_light_gray1"
                         android:gravity="center"
                         android:text="Won 1Lakh"
                         android:textColor="@color/black"
@@ -210,23 +211,25 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="150dp"
-                android:layout_weight="5">
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="5"
+                app:cardCornerRadius="5dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="2.5dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginRight="2.5dp"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="100dp"
+                        android:layout_width="match_parent"
                         android:layout_height="25dp"
                         android:layout_gravity="center"
                         android:gravity="center"
-                        android:text="Amit"
+                        android:text="BB"
                         android:textColor="@color/black" />
 
                 </LinearLayout>
@@ -234,30 +237,28 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="2.5dp"
                     android:layout_marginTop="30dp"
-                    android:layout_marginRight="2.5dp"
+                    android:gravity="center"
                     android:orientation="horizontal">
 
                     <ImageView
                         android:layout_width="100dp"
-                        android:layout_height="100dp" />
+                        android:layout_height="100dp"
+                        android:layout_gravity="center" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="2.5dp"
                     android:layout_marginTop="150dp"
-                    android:layout_marginRight="2.5dp"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="100dp"
+                        android:layout_width="match_parent"
                         android:layout_height="25dp"
                         android:layout_gravity="center"
-                        android:background="@drawable/border_red"
+                        android:background="@drawable/border_light_gray1"
                         android:gravity="center"
                         android:text="Won 50K"
                         android:textColor="@color/black"
@@ -270,38 +271,39 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="150dp"
-                android:layout_weight="5">
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="5"
+                app:cardCornerRadius="5dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="2.5dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginRight="2.5dp"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="100dp"
+                        android:layout_width="match_parent"
                         android:layout_height="25dp"
                         android:layout_gravity="center"
                         android:gravity="center"
-                        android:text="Sapna"
+                        android:text="CC"
                         android:textColor="@color/black" />
 
                 </LinearLayout>
 
                 <LinearLayout
-
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="2.5dp"
                     android:layout_marginTop="30dp"
-                    android:layout_marginRight="2.5dp"
+                    android:gravity="center"
                     android:orientation="horizontal">
 
                     <ImageView
                         android:layout_width="100dp"
+                        android:layout_gravity="center"
                         android:layout_height="100dp" />
 
                 </LinearLayout>
@@ -313,69 +315,17 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="100dp"
+                        android:layout_width="match_parent"
                         android:layout_height="25dp"
                         android:layout_gravity="center"
-                        android:background="@drawable/border_red"
+                        android:background="@drawable/border_light_gray1"
                         android:gravity="center"
                         android:text="Won 25K"
                         android:textColor="@color/black"
                         android:textStyle="bold" />
 
                 </LinearLayout>
-            </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="150dp"
-                android:layout_weight="5">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="100dp"
-                        android:layout_height="25dp"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:text="Raj"
-                        android:textColor="@color/black" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="100dp"
-                        android:layout_height="100dp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="150dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="100dp"
-                        android:layout_height="25dp"
-                        android:layout_gravity="center"
-                        android:background="@drawable/border_red"
-                        android:gravity="center"
-                        android:text="Won 10K"
-                        android:textColor="@color/black"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
