--- a/app/src/main/res/layout/fragment_my_matches.xml
+++ b/app/src/main/res/layout/fragment_my_matches.xml
@@ -1,82 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_image_contest"
     android:orientation="vertical"
     tools:context=".MyMatchesFragment">
 
-    <LinearLayout
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:background="@color/light_gray"
-        android:orientation="horizontal"
-        android:weightSum="8">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/upcoming"
-            android:layout_width="0dp"
-            android:layout_height="45dp"
-            android:layout_gravity="center"
-            android:layout_weight="3"
-            android:background="@drawable/border4_green"
-            android:gravity="center"
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/Upcoming_Match_User"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Upcoming"
-            android:textColor="@color/black"
-            android:textStyle="bold" />
+            app:tabSelectedTextColor="@color/green"
+            app:tabTextColor="@color/black" />
 
-        <TextView
-            android:id="@+id/live"
-            android:layout_width="0dp"
-            android:layout_height="45dp"
-            android:layout_gravity="center"
-            android:layout_weight="2"
-            android:background="@drawable/border4_green"
-            android:gravity="center"
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/Live_Match_User"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Live"
-            android:textColor="@color/black"
-            android:textStyle="bold" />
+            app:tabSelectedTextColor="@color/green"
+            app:tabTextColor="@color/black" />
 
-        <TextView
-            android:id="@+id/completed"
-            android:layout_width="0dp"
-            android:layout_height="45dp"
-            android:layout_gravity="center"
-            android:layout_weight="3"
-            android:background="@drawable/border4_green"
-            android:gravity="center"
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/Completed_Match_User"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Completed"
-            android:textColor="@color/black"
-            android:textStyle="bold" />
+            app:tabSelectedTextColor="@color/green"
+            app:tabTextColor="@color/black" />
 
-    </LinearLayout>
+    </com.google.android.material.tabs.TabLayout>
 
-    <LinearLayout
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="150dp"
-        android:orientation="horizontal"
-        android:padding="10dp">
-
-        <TextView
-            android:id="@+id/upcomingMatch"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/border1_green"
-            android:gravity="center"
-            android:text="VIEW UPCOMING MATCHES"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:visibility="gone" />
-
-    </LinearLayout>
+        android:layout_marginTop="50dp" />
 
 </FrameLayout>
