--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="header_black">#373737</color>
     <color name="counter_bg">#008577</color>
     <color name="yellow_theme">#ECBD15</color>
+    <color name="gray_light1">#81D3E8</color>
 </resources>
