--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#D70101</color>
+    <color name="red_1">#71062D</color>
     <color name="green">#109E38</color>
     <color name="dark_green">#006400</color>
     <color name="gray">#6A6A6A</color>
@@ -16,4 +17,5 @@
     <color name="counter_bg">#008577</color>
     <color name="yellow_theme">#ECBD15</color>
     <color name="gray_light1">#81D3E8</color>
+    <color name="light_pink">#F3E5F0</color>
 </resources>
