--- a/app/src/main/res/layout/fragment_contests.xml
+++ b/app/src/main/res/layout/fragment_contests.xml
@@ -6,11 +6,18 @@
     android:orientation="vertical"
     tools:context=".Fragment.ContestsFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/contestsList"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swiper"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_margin="5dp" />
+        android:layout_height="wrap_content">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/contestsList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_margin="5dp" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </LinearLayout>
