--- a/app/src/main/res/layout/fragment_winning.xml
+++ b/app/src/main/res/layout/fragment_winning.xml
@@ -5,11 +5,18 @@
     android:layout_height="match_parent"
     tools:context=".Fragment.WinningFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/winningList"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swiper"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_margin="5dp" />
+        android:layout_height="wrap_content">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/winningList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_margin="5dp" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </FrameLayout>
