--- a/app/src/main/res/layout/team_preview.xml
+++ b/app/src/main/res/layout/team_preview.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -16,11 +16,13 @@
             android:weightSum="10">
 
             <ImageView
+                android:id="@+id/playerImg"
                 android:layout_width="55dp"
                 android:layout_height="60dp"
                 android:layout_weight="3" />
 
             <TextView
+                android:id="@+id/playerName"
                 android:layout_width="55dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
